# ai-usage-dashboard-public

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.github/workflows/: release.yml
apps/android/: build.gradle  settings.gradle
apps/android/app/: build.gradle
apps/desktop/: codex-usage-plugin.mjs  codex-usage-service.mjs  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  app-shell.ts  main.tsx  styles.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  tray_assets.rs
apps/desktop/src-tauri/src/commands/: claude.rs  codex.rs  connect.rs  copilot.rs  fetch_state.rs  kimi.rs  mod.rs  openrouter.rs  platform.rs  shared.rs  tray.rs  widget_sync.rs
apps/desktop/src-tauri/src/credentials/: cache.rs  claude.rs  codex.rs  copilot.rs  kimi.rs  mod.rs  openrouter.rs
apps/desktop/src/components/: ConnectionModal.tsx  EmptyStateInline.tsx  SideNav.tsx  (+3 more)
apps/relay/: package.json  server.mjs
apps/relay-cloudflare/: package.json  wrangler.toml
apps/relay-cloudflare/src/: worker.js  worker.test.mjs
docs/: _config.yml  agent-setup.md  ai-agent-setup-prompt.md  android-widget.md  architecture.md  bootstrap.md  current-status.md  index.md  install.md  roadmap.md  session-handoff-2026-04-23.md  status-ko.md  widget-sync-setup.md
scripts/: doctor.mjs  render-widget-preview.mjs  setup-agent.mjs  setup-macos.sh  setup-windows.ps1
(+46 files in other folders)
