[package]
name = "ai_usage_dashboard"
version = "0.1.0"
description = "Cross-platform AI usage dashboard"
authors = ["AI Usage Dashboard Contributors"]
edition = "2024"

[lib]
name = "ai_usage_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
base64 = "0.22"
dirs = "6"
futures = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
png = "0.17"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tempfile = "3"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
